--- a/frontend/src/components/nav/nav.css
+++ b/frontend/src/components/nav/nav.css
@@ -1,27 +1,25 @@
-.nav{
-    display: flex;
-    justify-content: space-between;
-    padding: 0px 30px;
+.nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 30px;
 }
 
-.nav-btn{
-    width: 180px;
-    display: flex;
-    justify-content: space-around;
+.nav-btn {
+  width: 180px;
+  display: flex;
+  justify-content: space-around;
 }
 
-
-.nav-btn a{
-    color: white;
+.nav-btn a {
+  color: white;
 }
 
-.nav-btn a:hover{
-    text-decoration: underline;
+.nav-btn a:hover {
+  text-decoration: underline;
 }
 
-@media all and (max-width: 600px){
-
-    .nav-btn {
-        width: 45%;
-    }
+@media all and (max-width: 600px) {
+	.nav-btn {
+    width: 45%;
+	}
 }
