--- a/frontend/src/views/landing_page/landingPage.css
+++ b/frontend/src/views/landing_page/landingPage.css
@@ -1,175 +1,176 @@
 .landing-site-layout .header-container {
-    width: 100%;
-    height: 470px;
-    z-index: 1;
-    position: relative;
-    background-image: url(../../assest/images/medical-home-img.jpg);
-    background-size: 100% 100%;
+  width: 100%;
+  height: 470px;
+  z-index: 1;
+  position: relative;
+  background-image: url(../../assest/images/medical-home-img.jpg);
+  background-size: 100% 100%;
 }
 
-.landing-site-layout .header-container:after {
-    content : '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    z-index: -1;
-    background-image:  linear-gradient(to right, rgb(236 0 236 / 42%) , #1e90ffb8);
+.landing-site-layout .header-container::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+  background-image: linear-gradient(to right, rgb(236 0 236 / 42%), #1e90ffb8);
 }
 
 .flex-center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .home-text {
-    margin-top: 6em;
+  margin-top: 6em;
 }
 
 .home-text > h3 {
-    height: 40px;
-    font-size: 20px;
-    color: white;
-    margin: 0;
+  height: 40px;
+  font-size: 20px;
+  color: white;
+  margin: 0;
 }
 
 .home-text > h1 {
-    font-size: 60px;
-    padding-top: 12px;
-    padding-bottom: 15px;
-    margin: 0;
-    color: white;
+  font-size: 60px;
+  padding-top: 12px;
+  padding-bottom: 15px;
+  margin: 0;
+  color: white;
 }
 
 .home-text > button {
-    height: 30px;
-    display: flex;
-    align-items: center;
-    border-radius: 27px;
-    background-color: transparent;
-    border: 1px solid white;
-    color: white;
-    font-size: 14px;
-    cursor: pointer;
-    margin-top: 13px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  border-radius: 27px;
+  background-color: transparent;
+  border: 1px solid white;
+  color: white;
+  font-size: 14px;
+  cursor: pointer;
+  margin-top: 13px;
 }
 
 /* .landing-section{
-    height: 370px;
+  height: 370px;
 } */
 
 /* .flex{
-    display: flex;
-    height: 100%;
+  display: flex;
+  height: 100%;
 } */
 
 .side-img {
-    height: 100%;
-    /* width: 50%; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	height: 100%;
+	
+	/* width: 50%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .side-panel {
-    /* width: 50%; */
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  /* width: 50%; */
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .details-card {
-    width: 70%;
-    margin: 15px;
+  width: 70%;
+  margin: 15px;
 }
 
 .top-mark {
-    width: 35px;
-    height: 3px;
-    background-color: dodgerblue;
-    margin-top: 5px;
-    margin-bottom: 0;
-    border-radius: 9px;
+  width: 35px;
+  height: 3px;
+  background-color: dodgerblue;
+  margin-top: 5px;
+  margin-bottom: 0;
+  border-radius: 9px;
 }
 
 .btn-flex {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 .btn-border-round {
-    background-color: dodgerblue;
-    color: white;
-    border-radius: 20px;
+  background-color: dodgerblue;
+  color: white;
+  border-radius: 20px;
 }
 
 .bg-white {
-    background-color: white;
+  background-color: white;
 }
 
 .icon {
-    border: 1px solid dodgerblue;
-    width: 100px;
-    color: dodgerblue;
-    height: 100px;
-    font-size: 37px;
-    border-radius: 73px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: .5s ease;
-    cursor: pointer;
+  border: 1px solid dodgerblue;
+  width: 100px;
+  color: dodgerblue;
+  height: 100px;
+  font-size: 37px;
+  border-radius: 73px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: .5s ease;
+  cursor: pointer;
 }
 
 .icon:hover {
-    background-color: dodgerblue;
-    color: white !important;
+  background-color: dodgerblue;
+  color: white !important;
 }
 .feature-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
 }
 
 .features-row-container {
-    width: 80%;
+  width: 80%;
 }
 
 .features-row-container > .ant-row:last-child {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .feature-col {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .feature-col > h2 {
-    font-size: 14px;
-    margin: 10px 0px;
+  font-size: 14px;
+  margin: 10px 0px;
 }
 
 .nav-logo > span{
-    font-size: 24px;
-    color: white;
-    background: dodgerblue;
-    padding: 5px;
-    border-radius: 9px;
+  font-size: 24px;
+  color: white;
+  background: dodgerblue;
+  padding: 5px;
+  border-radius: 9px;
 }
 
 @media all and (max-width: 600px){
-    .header-container {
-        padding: 0;
-    }
-    .home-text > h1 {
-        font-size: 30px;
-    }
-    .nav-btn {
-        width: 45%;
-    }
+  .header-container {
+    padding: 0;
+  }
+  .home-text > h1 {
+    font-size: 30px;
+  }
+  .nav-btn {
+    width: 45%;
+  }
 }
