--- a/frontend/src/components/footer/footer.css
+++ b/frontend/src/components/footer/footer.css
@@ -1,6 +1,13 @@
+.footer-container {
+  position: static;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 .footer {
   text-align: center;
   background: #1e90ff;
   color: #f2f2f2;
-  margin-top : 3em;
+  margin-top: 3em;
 }
