--- a/frontend/src/dashboard/patient_dashboard/components/ratings.css
+++ b/frontend/src/dashboard/patient_dashboard/components/ratings.css
@@ -3,6 +3,10 @@
   margin-top: 2em;
 }
 
-.margin-bottom {
+.personAvatar {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 2em;
+  padding-top: 1em;
 }
